--- a/flexbox/css/flexbox.css
+++ b/flexbox/css/flexbox.css
@@ -5,8 +5,8 @@
           box-sizing: border-box;
   margin-right: auto;
   margin-left: auto;
-  padding-right: 2rem;
-  padding-left: 2rem;
+  padding-right: 2em;
+  padding-left: 2em;
 }
 
 .flexbox-grid.container-fluid:after,
@@ -39,8 +39,8 @@
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
-  margin-right: -0.5rem;
-  margin-left: -0.5rem;
+  margin-right: -1em;
+  margin-left: -1em;
 }
 .flexbox-grid .row:after,
 .flexbox-grid .row:before {
@@ -58,8 +58,8 @@
   -webkit-flex-shrink: 0;
       -ms-flex-negative: 0;
           flex-shrink: 0;
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
+  padding-right: 0.5em;
+  padding-left: 0.5em;
 }
 .flexbox-grid .col-xs {
   -webkit-box-flex: 1;
