--- a/flexbox/sass/flexbox_7.0.scss
+++ b/flexbox/sass/flexbox_7.0.scss
@@ -2,9 +2,9 @@ $column-count: 12 !default;
 $column-selector: '.col' !default;
 $offset-modifier: 'offset' !default;
 
-$gutter-width: 1rem !default;
-$outer-margin: 2rem !default;
-$gutter-compensation: (($gutter-width / 2) * -1) !default;
+$gutter-width: 1em !default;
+$outer-margin: 2em !default;
+$gutter-compensation: (($gutter-width) * -1) !default;
 $half-gutter-width: ($gutter-width / 2) !default;
 
 $width-xs: 30 !default;
@@ -17,9 +17,9 @@ $viewport-sm: $width-sm * 1em !default;
 $viewport-md: $width-md * 1em !default;
 $viewport-lg: $width-lg * 1em !default;
 
-$container-sm: $width-sm * 1rem + $gutter-width !default;
-$container-md: $width-md * 1rem + $gutter-width !default;
-$container-lg: $width-lg * 1rem + $gutter-width !default;
+$container-sm: $width-sm * 1em + $gutter-width !default;
+$container-md: $width-md * 1em + $gutter-width !default;
+$container-lg: $width-lg * 1em + $gutter-width !default;
 
 $xs: 'xs' !default;
 $sm: 'sm' !default;
